# waste-sorting-robot

./: .gitignore  .project_provenance.json  ASSET_CREDITS.md  OBJAVERSE_ASSET_PLAN.md  README.md  RUN_INSTRUCTIONS.md  current_waste_model.txt  frame_0019.ini  trial_dashboard.py
asset_candidates/: objaverse_waste_candidates.csv  review_glass.txt  review_metal.txt  review_paper.txt  review_plastic.txt  selected_objaverse_uids.csv
datasets/waste_4class/waste_dataset/: README.roboflow.txt  data.yaml
datasets/waste_4class/waste_dataset/runs/detect/train-2/: args.yaml  results.csv
datasets/waste_4class/waste_dataset/train/: labels.cache
datasets/waste_4class/waste_dataset/train/labels/: 000000_JPG.rf.gsUxG5l1rLMN4Pua0urO.txt  000000_jpg.rf.n5PqjkdqSvbRJs6s7Ael.txt  000000_jpg.rf.qlGewYzW2lJCThNB8lZu.txt  000000_jpg.rf.zIYoWE1bkNwrSTCKOZoh.txt  000002_jpg.rf.sdULqAUqOvC1KEVFYtBr.txt  000003_jpg.rf.ixzV0H4jWpGWkZPo853M.txt  000004_jpg.rf.NDpUVk90DkfxfWL3eOgZ.txt  000004_jpg.rf.uo5JvYj8U0pmFH7QMP2j.txt  000007_jpg.rf.uJn5ks3k0gnwGOzTImLp.txt  000008_jpg.rf.njK0zZRslvqYo3wTYn5h.txt  000008_jpg.rf.yKKiuWI4WDae4CjW1cfy.txt  000010_JPG.rf.RjFlYYjfhjpLEwvAxpkD.txt  000010_jpg.rf.q4DjUlY0UsFPoybo0nvx.txt  000012_jpg.rf.sWdjk4ZHMch1VxtwSKYZ.txt  000013_jpg.rf.bFdtcHcWjXWtXZuyidOY.txt  000016_jpg.rf.ymo4yMwgIXgmawRYH1b7.txt  000017_jpg.rf.yiTA52d62tofkZ4Yitz8.txt  000022_jpg.rf.ecq7HOJG7AxkjodFsXr1.txt  000022_jpg.rf.zWTQSqmeY0CyB76CmFth.txt  000024_JPG.rf.YDbkjAgXntni5H4ByVcm.txt  000027_JPG.rf.e8hbG8SNSZTc0vhTyewZ.txt  000027_jpg.rf.6TLHS9fy9X9t0rhvnoWK.txt  000028_jpg.rf.eB4FE87sJN7ABxvSraq7.txt  000028_jpg.rf.oY9tORkZ6RzJlhzSj0HC.txt  000029_JPG.rf.QdKpDyo5ley8JIh5fqhu.txt  000030_jpg.rf.WIDd1FvG7RTI7iSIcTch.txt  000041_JPG.rf.n76HhItgzRDbwMitd47w.txt  000043_jpg.rf.fSodEPNqUnDCfZrAu6zy.txt  000045_jpg.rf.y1sQFekZltPRAGGJWLNV.txt  000048_jpg.rf.rWXXrtrAvNs9WLi8CjHX.txt  000049_jpg.rf.CquZJScnmFfS5yKaC1eT.txt  000050_JPG.rf.gqUbgtX2P54D4AgJHCQY.txt  000051_jpg.rf.f8pMw47VyJmKhet5LWTw.txt  000052_jpg.rf.siLNoHVJ9vmn0Zb3mndf.txt  000053_jpg.rf.U0XMDVuhDflo8uLUyXis.txt  000055_JPG.rf.DwR5iJzsOMZoaVm3Rkas.txt  000056_jpg.rf.beBhOXWrA4QJuFHG1FLs.txt  000060_JPG.rf.7VdrSb7cfDVmAFi5T5nG.txt  000062_JPG.rf.BPp306AKtcBbgHJ0bcyb.txt  000069_jpg.rf.XIJHvL0veUUb9AkSJa78.txt  (+794 more)
datasets/waste_4class/waste_dataset/valid/: labels.cache
datasets/waste_yolo/: data.yaml
src/waste_robot_moveit_config/config/: ros_controllers.yaml
src/waste_sorting_bringup/: CMakeLists.txt  package.xml
src/waste_sorting_bringup/config/: pick_targets.yaml
src/waste_sorting_bringup/launch/: full_system.launch  full_system_ur5.launch  full_system_yolo.launch  ur5_integration.launch  ur5_only_headless.launch
src/waste_sorting_control/: CMakeLists.txt  package.xml
src/waste_sorting_control/scripts/: auto_cycle_manager.py  color_sort_executor.py  simple_sort_controller.py  sort_executor.py  test_ur5_controller.py  ur5_go_home.py
src/waste_sorting_description/: CMakeLists.txt
src/waste_sorting_description/urdf/: waste_robot.urdf
src/waste_sorting_gazebo/: CMakeLists.txt  package.xml
src/waste_sorting_gazebo/launch/: arm_pick_place.launch  collect_realistic_synthetic_dataset.launch  dataset_camera.launch  full_system_dataset.launch  full_system_realistic_yolo.launch  full_system_realistic_yolo_fake_arm_executor.launch  full_system_realistic_yolo_with_fake_arm.launch  full_system_yolo.launch  realistic_asset_demo.launch  realistic_asset_trials.launch  realistic_waste_demo.launch  sim.launch  sim_detector.launch  sort_executor.launch  tracker.launch  trial_logger.launch  yolo_detector.launch
src/waste_sorting_gazebo/models/conveyor_belt/: model.config  model.sdf
src/waste_sorting_gazebo/models/realistic_waste/waste_glass_shard/: model.config  model.sdf
src/waste_sorting_gazebo/models/realistic_waste/waste_metal_crushed_can/: model.config  model.sdf
src/waste_sorting_gazebo/models/realistic_waste/waste_paper_crumpled/: model.config  model.sdf
src/waste_sorting_gazebo/models/realistic_waste/waste_plastic_deformed_bottle/: model.config  model.sdf
src/waste_sorting_gazebo/models/top_camera/: model.config  model.sdf
src/waste_sorting_gazebo/models/trash_bin_blue/: model.config  model.sdf
src/waste_sorting_gazebo/models/trash_bin_green/: model.config  model.sdf
src/waste_sorting_gazebo/models/trash_bin_yellow/: model.config  model.sdf
src/waste_sorting_gazebo/models/trash_object_green/: model.config  model.sdf
src/waste_sorting_gazebo/models/trash_object_red/: model.config  model.sdf
src/waste_sorting_gazebo/models/trash_object_yellow/: model.config  model.sdf
src/waste_sorting_gazebo/models/waste_metal/: model.config  model.sdf
src/waste_sorting_gazebo/models/waste_paper/: model.config  model.sdf
src/waste_sorting_gazebo/models/waste_plastic/: model.config  model.sdf
src/waste_sorting_gazebo/models/ws_conveyor_belt/: model.config  model.sdf
src/waste_sorting_gazebo/msg/: Detection2D.msg  Detection2DArray.msg
src/waste_sorting_gazebo/plugins/: conveyor_motion_plugin.cpp
src/waste_sorting_gazebo/scripts/: analyze_realistic_yolo_kpi.py  analyze_robot_arm_results.py  analyze_trial_results.py  arm_pick_place.py  auto_select_objaverse_candidates.py  dataset_camera_feeder.py  download_selected_objaverse_assets.py  fake_robot_arm_executor.py  generate_realistic_waste_meshes.py  pick_event_model_resolver.py  prepare_realistic_assets.py  realistic_conveyor_feeder.py  realistic_synthetic_dataset_collector.py  realistic_yolo_kpi_logger.py  review_objaverse_candidates.py  robot_arm_result_logger.py  run_realistic_asset_trials.py  search_objaverse_waste_candidates.py  sim_detector.py  sort_executor.py  spawn_fake_robot_arm_visual.py  spawn_realistic_asset.py  spawn_realistic_waste.py  spawn_sequence.py  spawn_simple_arm.py  spawn_trash.py  spawn_trash.py.save  tracker_node.py  trial_logger.py  yolo_detector.py
src/waste_sorting_gazebo/worlds/: waste_sorting.world
src/waste_sorting_vision/: CMakeLists.txt  package.xml
src/waste_sorting_vision/scripts/: detect_colors.py  detect_red.py
(+211 files in other folders)
