<?xml version="1.0"?>
<package format="2">
  <name>waste_sorting_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for the waste sorting robot simulation system</description>

  <maintainer email="ertugrul@example.com">ertugrul</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>waste_sorting_gazebo</exec_depend>
  <exec_depend>waste_sorting_control</exec_depend>
  <exec_depend>waste_sorting_vision</exec_depend>

  <export/>
</package>
